--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,70 +1,206 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Courier New', Courier,monospace;
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Nunito Sans", sans-serif;
 }
-body{
+body {
+  background-color: black;
+  color: #ececeb;
+}
+/* ESTILOS HEADER */
+.header {
+  background-color: #10316b;
+  color: #ececeb;
+  height: 10vh;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+
+  .navegacion {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding: 0.5rem;
+
+    .tituloHeader {
+      font-family: "Lobster", sans-serif;
+      font-size: 4rem;
+    }
+
+    .listaNav {
+      list-style: none;
+      display: flex;
+      align-items: center;
+      .listaItem {
+        margin-right: 20px;
+
+        .linkNav {
+          color: #ececeb;
+          text-decoration: none;
+          font-weight: 700;
+          font-size: 1.1rem;
+          padding: 0.5rem 1rem;
+
+          transition: transform 0.3s, box-shadow 0.3s;
+          &:hover {
+            transform: scale(0.95);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            border-radius: 5px;
+          }
+        }
+
+        .linkNav.iniciarSesion {
+          background-color: black;
+          color: #ECECEB;
+          border-radius: 5px;
+
+          transition: transform 0.3s, box-shadow 0.3s;
+          &:hover {
+            background-color: #e25822;
+            transform: scale(0.95);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+          }
+        }
+      }
+    }
+  }
+}
+/* ESTILOS HEADER MOBILE Y TABLET */
+
+@media (max-width: 1075px) {
+  .header {
+    height: initial;
+    .navegacion {
+      flex-direction: column;
+      margin-left: 10px;
+      margin-right: 10px;
+      row-gap: 20px;
+
+      .tituloHeader {
+        font-size: 2rem;
+      }
+
+      .listaNav {
+        padding: initial;
+        .listaItem {
+          .linkNav {
+            font-weight: 400;
+            margin-right: initial;
+            font-size: 1rem;
+            padding: 0.2rem;
+          }
+        }
+      }
+    }
+  }
+}
+/*seccion principal*/
+
+.main {
+  .sectionPrincipal {
+    color: #ececeb;
+    background: linear-gradient(to right top, #0000008a, #0000008a),
+      url(../assets/IMG/background2.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    .tituloPrincipal {
+      font-family: "Play", sans-serif;
+      font-size: 4rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      text-shadow: -3px -3px 3px black, 3px -3px 3px black, -3px 3px 3px black,
+        3px 3px 3px black;
+    }
+    .subtituloPrincipal {
+      font-size: 2.2rem;
+      font-weight: 400;
+      margin-bottom: 1rem;
+      text-shadow: -3px -3px 3px black;
+    }
+
+    .botonRegistrarse {
+      background-color: black;
+      color: #ececeb;
+      padding: 1rem 2rem;
+      border-radius: 5px;
+      font-size: 1.2rem;
+      font-weight: 700;
+      text-decoration: none;
+
+      transition: transform 0.3s, box-shadow 0.3s;
+
+      &:hover {
+        background-color: #e25822;
+        transform: scale(0.95);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+      }
+    }
+  }
+
+  /* Buscador principal */
+
+  .buscadorPrincipal {
     background-color: black;
-    color: white;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .tituloSection {
+      font-size: 3rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+
+    .buscadorMotos {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .inputBuscador{
+        height: 50px;
+        width: 500px;
+        margin: 20px 10px;
+        padding: 0 20px;
+        font-size: 1.2rem;
+        border: 3px solid #ececeb;
+        border-radius: 30px;
+        outline: none;
+      }
+      .botonBuscador{
+        background-color: #ececeb;
+        color: black;
+        display: inline-block;
+        height: 50px;
+        margin: 20px 10px;
+        padding: 0 20px;
+        border-radius: 30px;
+        font-size: 1.2rem;
+        font-weight: 700;
+        border: 3px solid #e25822;
+        text-align: center;
+
+        transition: transform 0.3s, box-shadow 0.3s;
+        &:hover {
+          background-color: #e25822;
+          transform: scale(0.95);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+      }
+    }
+  }
 }
-
-.header{
-    background-color: #9f9f9f;
-    color: #ffffff;
-    height: 10vh;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-
-    .navegacion{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-left: 40px;
-        margin-right: 40px;
-        padding: 1.5rem 0 ;
-
-        .anclalogo{
-            text-decoration: none;
-            color: #ffffff;
-            font-weight: 700;
-            font-size: 1.2rem;
-        }
-
-        .listaNav{
-            list-style: none;
-            display: flex;
-            align-items: center;
-        .listaItem{
-            margin-right: 20px;
-            
-            .linkNav{
-                color: #ffffff;
-                text-decoration: none;
-                font-weight: 700;
-                font-size: 1.1rem;
-                padding: 0.5rem 1rem;
-
-                transition: 0.3s,box-shadow 0.3s;
-                &:hover{
-                    transform: scale(0.95);
-                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
-                    border-radius: 5px;
-                }
-            }
-
-                .linkNav.iniciarSesion{
-                    background-color: black;
-                    color: white;
-                    border-radius: 5px;
-        }   
-
-        }
-    }
-    }
-
-    
-        
-    }
-
